# 42overflow

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.dev  Notes.txt  README-prisma-docker.md  README.md  TODO.md  dev_populate.sh  doc-dev-rag.md  docdev.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  github_checklist.md  nginx.conf  package-lock.json  package.json  readme_petya.md  reload_rag.sh  todo.md  user_manual.md  vite.config.ts
go-backend/: claude.go  go.mod  main.go  main2.go  server.go
go-backend/theory/: ai.md  flow.md  server.md
llm-system-interface/: .dockerignore  .env.example  Dockerfile  go.mod  go.sum  llm_server.go  main.go  readme.md  test_api.sh  todo.md
llm-system-interface/docs/: README.md  docs.md  (+4 more)
messages/: nl.json
ollama-init/: Dockerfile  entrypoint.sh
prisma/: prisma.config.ts  schema.prisma  seed-qa-pairs.sql  seed.ts
project.inlang/: settings.json
python-services/rag/: .dockerignore  .env.example  .flake8  Dockerfile  admin_router.py  bm25_index.py  config.py  db.py  detector.py  dev_populate.py  embedder.py  generator.py  health_router.py  indexer.py  limitations.txt  main.py  metrics.py  numpy_index.py  pyproject.toml  retriever.py  router.py  router_admin.py  router_health.py  router_rag.py  seed.json  seed.py  store.py  sync_db.md  testing.py  todo.md
python-services/rag/seed/: a-maze-ing.json  agent-smith.json  call-me-maybe.json  codexion.json  fly-in.json  pacman.json  rag-against-machine.json  tap.json
python-services/rag/tests/: conftest.py  explore_bm25.py  flow_seed_embed_store.py  test_bm25_index.py  test_db.py  test_db_integration.py  test_detector.py  test_embedder.py  test_generator.py  test_main.py  test_metrics.py  test_numpy_index.py  test_retriever.py  test_router.py  test_router_unit.py  test_seed.py  test_store.py
python-services/rag/theory/: enumerate.txt  rag.py  rag_cpy.py
python-services/speech-to-text/: Dockerfile  main.py  pyproject.toml
python-services/speech-to-text/theory/: 01_stt_flow.md  03_py_staff.md  whisper.md  whisper2.md  whisper2.txt
src/: app.css  app.d.ts  hooks.server.ts  seed.ts
static/: robots.txt
(+381 files in other folders)
