[project]
name = "python-rag-service"
version = "0.1.0"
description = "Python RAG microservice for llm-system-interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "chromadb==0.5.5",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "uvicorn>=0.35.0",
]

[tool.uv]
dev-dependencies = []
