[project]
name = "python-rag-service"
version = "0.1.0"
description = "Python RAG microservice for llm-system-interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "chromadb==0.5.5",
  "fastapi>=0.116.0",
  "fastembed>=0.3.6",
  "httpx>=0.28.0",
  "rank-bm25>=0.2.2",
  "uvicorn>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=1.3.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "autopep8>=2.3.2",
    "autoflake>=2.3.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]   # lets tests import from python-services/rag/ root

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true   # skip stubs for fastembed, chromadb, rank_bm25
