[project]
name = "python-stt-service"
version = "0.1.0"
description = "Python speech-to-text microservice using Whisper"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  # "openai-whisper>=20240930",
  "faster-whisper>=1.1.0",
  "python-multipart>=0.0.20",
]

[dependency-groups]
dev = []
